# ImageSizeProxy

./: .gitignore  CMakeLists.txt  example.cpp  libbitmap.cpp  libbitmap.h
ImageSize/: Graphic.h  Image.h  ImageProxy.h  ImageSize.vcxproj  ImageSize.vcxproj.filters  Rect.h  StrExtentParser.cpp  StrExtentParser.h
ImageSize/x64/Debug/: ImageSize.exe.recipe  vc143.idb
ImageSize/x64/Debug/ImageSize.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+5 more)
ImageSizeApp/: ImageSizeApp.vcxproj  main.cpp
ImageSizeApp/x64/Debug/: ImageSizeApp.exe.recipe  ImageSizeApp.ilk  vc143.idb
ImageSizeTests/: ImageSizeTests.vcxproj  MemoryLeakDetector.h  test.cpp
ImageSizeTests/x64/Debug/: ImageSizeTests.exe.recipe  ImageSizeTests.vcxproj.FileListAbsolute.txt
lib/x64/Debug/: ImageSize.idb  libbitmap.idb
qt/: libbitmap.pro  test.pro
vs2008/: libbitmap.sln  libbitmap.vcproj  test.vcproj
vs2013/: libbitmap.sln  libbitmap.vcxproj  libbitmap.vcxproj.filters  test.vcxproj
vs2015/: ImageProxy.sln  libbitmap.sln  libbitmap.vcxproj  test.vcxproj
vs2015/libbitmap_x64_Debug/libbitmap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libbitmap.lastbuildstate
vs2015/test_x64_Debug/: test.exe.recipe  test.ilk  test.vcxproj.FileListAbsolute.txt  vc143.idb
vs2015/test_x64_Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+18 files in other folders)
